--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                                 </path>
                             </svg>
                         </a>
+                        <a href="./image/css.png" download="CV"><button>Download CV</button></a>
                     </div>
                     <div class="info">
                         <p>
@@ -98,10 +99,26 @@
                     expertise and the achieved results.</p>
                     <button>Scroll</button>
             </div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
+            <div class="project-card">
+                <a href=""><img src="./image/share.png" alt=""></a>
+                <div class="card-info">
+                    <p>this is a votiong app where people can vote online Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt exercitationem doloribus ipsam. Laudantium debitis sed qui veritatis  </p>
+                </div>
+            </div>
+            <div class="project-card">
+                <a href=""><img src="./image/share.png" alt=""></a>
+                <div class="card-info">
+                    <p>this is a votiong app where people can vote online </p>
+                </div>
+            </div>
+            <div class="project-card">
+                <a href=""><img src="./image/share.png" alt=""></a>
+                <div class="card-info"></div>
+            </div>
+            <div class="project-card">
+                <a href=""><img src="./image/share.png" alt=""></a>
+                <div class="card-info"></div>
+            </div>
         </div>
         </div>
         <div id="page-4">
@@ -117,7 +134,57 @@
                 <div class="circle"></div>
             </div>
         </div>
-        <div id="page-5"></div>
+        <div id="page-5">
+            <div class="contact">
+                <div class="left-con">
+                    <h1>Connect</h1>
+                    <h1>With</h1>
+                    <h1>Me Here</h1>
+                    <div class="link">
+                        <a href="https://www.linkedin.com/in/sushant-chaudhary-9b0529269/" target="_blank">
+                            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100"
+                                viewBox="0 0 48 48">
+                                <path fill="#0288D1"
+                                    d="M42,37c0,2.762-2.238,5-5,5H11c-2.761,0-5-2.238-5-5V11c0-2.762,2.239-5,5-5h26c2.762,0,5,2.238,5,5V37z">
+                                </path>
+                                <path fill="#FFF"
+                                    d="M12 19H17V36H12zM14.485 17h-.028C12.965 17 12 15.888 12 14.499 12 13.08 12.995 12 14.514 12c1.521 0 2.458 1.08 2.486 2.499C17 15.887 16.035 17 14.485 17zM36 36h-5v-9.099c0-2.198-1.225-3.698-3.192-3.698-1.501 0-2.313 1.012-2.707 1.99C24.957 25.543 25 26.511 25 27v9h-5V19h5v2.616C25.721 20.5 26.85 19 29.738 19c3.578 0 6.261 2.25 6.261 7.274L36 36 36 36z">
+                                </path>
+                            </svg>
+                        </a>
+                        <a href="https://github.com/SushantChaudhary03" target="_blank">
+                            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100"
+                                viewBox="0 0 48 48">
+                                <path fill="#2100c4"
+                                    d="M24,4C12.954,4,4,12.954,4,24c0,8.887,5.801,16.411,13.82,19.016h12.36 C38.199,40.411,44,32.887,44,24C44,12.954,35.046,4,24,4z">
+                                </path>
+                                <path fill="#ddbaff"
+                                    d="M37,23.5c0-2.897-0.875-4.966-2.355-6.424C35.591,15.394,34.339,12,34.339,12 c-2.5,0.5-4.367,1.5-5.609,2.376C27.262,14.115,25.671,14,24,14c-1.71,0-3.339,0.118-4.834,0.393 c-1.242-0.879-3.115-1.889-5.632-2.393c0,0-1.284,3.492-0.255,5.146C11.843,18.6,11,20.651,11,23.5 c0,6.122,3.879,8.578,9.209,9.274C19.466,33.647,19,34.764,19,36l0,0.305c-0.163,0.045-0.332,0.084-0.514,0.108 c-1.107,0.143-2.271,0-2.833-0.333c-0.562-0.333-1.229-1.083-1.729-1.813c-0.422-0.616-1.263-2.032-3.416-1.979 c-0.376-0.01-0.548,0.343-0.5,0.563c0.043,0.194,0.213,0.5,0.896,0.75c0.685,0.251,1.063,0.854,1.438,1.458 c0.418,0.674,0.417,2.468,2.562,3.416c1.53,0.677,2.988,0.594,4.097,0.327l0.001,3.199c0,0.639-0.585,1.125-1.191,1.013 C19.755,43.668,21.833,44,24,44c2.166,0,4.243-0.332,6.19-0.984C29.584,43.127,29,42.641,29,42.002L29,36 c0-1.236-0.466-2.353-1.209-3.226C33.121,32.078,37,29.622,37,23.5z">
+                                </path>
+                                <path fill="#ddbaff"
+                                    d="M15,18l3.838-1.279c1.01-0.337,1.231-1.684,0.365-2.302l-0.037-0.026 c-2.399,0.44-4.445,1.291-5.888,2.753C13.596,17.658,14.129,18,15,18z">
+                                </path>
+                                <path fill="#ddbaff"
+                                    d="M28.693,14.402c-0.878,0.623-0.655,1.987,0.366,2.327L32.872,18c0.913,0,1.461-0.37,1.773-0.924 c-1.46-1.438-3.513-2.274-5.915-2.701C28.717,14.384,28.705,14.393,28.693,14.402z">
+                                </path>
+                                <path fill="#ddbaff"
+                                    d="M24,31c-1.525,0-2.874,0.697-3.791,1.774C21.409,32.931,22.681,33,24,33s2.591-0.069,3.791-0.226 C26.874,31.697,25.525,31,24,31z">
+                                </path>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+                <div class="right-con">
+                    <h2>Contact</h2>
+                    <form action="">
+                        <input type="text" placeholder="Name">
+                        <input type="text" placeholder="Email">
+                        <textarea name="" id="" cols="36" rows="5" placeholder="Type Massage Here"></textarea>
+                        <button>Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
