add custom cursor

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div class="cursor"></div>
     <header>
         <div class="nav">
             <div class="logo">sushant</div>
