--- a/index.html
+++ b/index.html
@@ -94,50 +94,195 @@
         </div>
         <div id="page-3">
             <div class="scroll-x">
-            <div class="project-card">
-                <h1>Project<br>Work</h1>
-                <p>I've played a key role in developing impactful projects. Here's a curated selection showcasing my
-                    expertise and the achieved results.</p>
+                <div class="project-card">
+                    <h1>Project<br>Work</h1>
+                    <p>I've played a key role in developing impactful projects. Here's a curated selection showcasing my
+                        expertise and the achieved results.</p>
                     <button>Scroll</button>
-            </div>
-            <div class="project-card">
-                <a href=""><img src="./image/share.png" alt=""></a>
-                <div class="card-info">
-                    <p>this is a votiong app where people can vote online Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt exercitationem doloribus ipsam. Laudantium debitis sed qui veritatis  </p>
+                </div>
+                <div class="project-card">
+                    <a href=""><img src="./image/share.png" alt=""></a>
+                    <div class="card-info">
+                        <p>this is a votiong app where people can vote online Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Deserunt exercitationem doloribus ipsam. Laudantium debitis sed qui
+                            veritatis </p>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <a href=""><img src="./image/share.png" alt=""></a>
+                    <div class="card-info">
+                        <p>this is a votiong app where people can vote online </p>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <a href=""><img src="./image/share.png" alt=""></a>
+                    <div class="card-info"></div>
+                </div>
+                <div class="project-card">
+                    <a href=""><img src="./image/share.png" alt=""></a>
+                    <div class="card-info"></div>
                 </div>
             </div>
-            <div class="project-card">
-                <a href=""><img src="./image/share.png" alt=""></a>
-                <div class="card-info">
-                    <p>this is a votiong app where people can vote online </p>
-                </div>
-            </div>
-            <div class="project-card">
-                <a href=""><img src="./image/share.png" alt=""></a>
-                <div class="card-info"></div>
-            </div>
-            <div class="project-card">
-                <a href=""><img src="./image/share.png" alt=""></a>
-                <div class="card-info"></div>
-            </div>
-        </div>
         </div>
         <div id="page-4">
-            <div class="move">
-                <img src="./image/css.png" alt="">
-                <img src="./image/css.png" alt="">
-                <img src="./image/css.png" alt="">
-                <img src="./image/css.png" alt="">
-                <img src="./image/css.png" alt="">
-                <img src="./image/css.png" alt="">
-                <img src="./image/css.png" alt="">
-                <img src="./image/css.png" alt="">
-                <div class="circle"></div>
+            <div class="skill-section-1">
+                <div class="moving-txt">
+                    <div class="con">
+                        <h1>Experiences</h1>
+                        <div class="dot"></div>
+                        <h1>content</h1>
+                        <div class="dot"></div>
+                        <h1>environments</h1>
+                        <div class="dot"></div>
+                    </div>
+                    <div class="con">
+                        <h1>Experiences</h1>
+                        <div class="dot"></div>
+                        <h1>content</h1>
+                        <div class="dot"></div>
+                        <h1>environments</h1>
+                        <div class="dot"></div>
+                    </div>
+                    <div class="con">
+                        <h1>Experiences</h1>
+                        <div class="dot"></div>
+                        <h1>content</h1>
+                        <div class="dot"></div>
+                        <h1>environments</h1>
+                        <div class="dot"></div>
+                    </div>
+                </div>
             </div>
+            <div class="skill-section-2">
+                <div class="my-skills">
+                    <img src="./image/html.png" alt="">
+                    <div class="heading">
+                        <h1>01</h1>
+                        <div class="line"></div><br>
+                    </div>
+                    <div class="skill-details">
+                        <h1>HTML</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi debitis accusamus
+                            odio, fugiat expedita unde tje nmame of the class of the greekt greek wirt.</p>
+                    </div>
+                </div>
+
+                <div class="my-skills">
+                    <img src="./image/css.png" alt="">
+                    <div class="heading">
+                        <h1>02</h1>
+                        <div class="line"></div><br>
+                    </div>
+                    <div class="skill-details">
+                        <h1>CSS</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi debitis accusamus
+                            odio, fugiat expedita unde tje nmame of the class of the greekt greek wirt.</p>
+                    </div>
+                </div>
+
+                <div class="my-skills">
+                    <img src="./image/js.png" alt="">
+                    <div class="heading">
+                        <h1>03</h1>
+                        <div class="line"></div><br>
+                    </div>
+                    <div class="skill-details">
+                        <h1>JS</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi debitis accusamus
+                            odio, fugiat expedita unde tje nmame of the class of the greekt greek wirt.</p>
+                    </div>
+                </div>
+
+                <div class="my-skills">
+                    <img src="./image/react.png" alt="">
+                    <div class="heading">
+                        <h1>04</h1>
+                        <div class="line"></div><br>
+                    </div>
+                    <div class="skill-details">
+                        <h1>REACT</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi debitis accusamus
+                            odio, fugiat expedita unde tje nmame of the class of the greekt greek wirt.</p>
+                    </div>
+                </div>
+
+                <div class="my-skills">
+                    <img src="./image/tailwind.png" alt="">
+                    <div class="heading">
+                        <h1>05</h1>
+                        <div class="line"></div><br>
+                    </div>
+                    <div class="skill-details">
+                        <h1>Tailwind CSS</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi debitis accusamus
+                            odio, fugiat expedita unde tje nmame of the class of the greekt greek wirt.</p>
+                    </div>
+                </div>
+
+                <div class="my-skills">
+                    <img src="./image/gsap.png" alt="">
+                    <div class="heading">
+                        <h1>06</h1>
+                        <div class="line"></div><br>
+                    </div>
+                    <div class="skill-details">
+                        <h1>GSAP</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi debitis accusamus
+                            odio, fugiat expedita unde tje nmame of the class of the greekt greek wirt.</p>
+                    </div>
+                </div>
+
+                <div class="my-skills">
+                    <img src="./image/node.png" alt="">
+                    <div class="heading">
+                        <h1>07</h1>
+                        <div class="line"></div><br>
+                    </div>
+                    <div class="skill-details">
+                        <h1>Node JS</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi debitis accusamus
+                            odio, fugiat expedita unde tje nmame of the class of the greekt greek wirt.</p>
+                    </div>
+                </div>
+
+                <div class="my-skills">
+                    <img src="./image/express.png" alt="">
+                    <div class="heading">
+                        <h1>08</h1>
+                        <div class="line"></div><br>
+                    </div>
+                    <div class="skill-details">
+                        <h1>Express JS</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi debitis accusamus
+                            odio, fugiat expedita unde tje nmame of the class of the greekt greek wirt.</p>
+                    </div>
+                </div>
+
+                <div class="my-skills">
+                    <img src="./image/mongodb.png" alt="">
+                    <div class="heading">
+                        <h1>09</h1>
+                        <div class="line"></div><br>
+                    </div>
+                    <div class="skill-details">
+                        <h1>Mongo DB</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi debitis accusamus
+                            odio, fugiat expedita unde tje nmame of the class of the greekt greek wirt.</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        </div>
+        </div>
         </div>
         <div id="page-5">
             <div class="contact">
                 <div class="left-con">
+                    <div class="moving-circle">
+                        <div class="circle-1"></div>
+                        <div class="circle-2"></div>
+                    </div>
                     <h1>Connect</h1>
                     <h1>With</h1>
                     <h1>Me Here</h1>
