add some responsivness

--- a/index.html
+++ b/index.html
@@ -14,12 +14,22 @@
         <div class="nav">
             <div class="logo">sushant</div>
             <div class="list">
+                <li onclick="scrollAbout()">about</li>
+                <li onclick="scrollProjects()">projects</li>
+                <li onclick="scrollSkills()">skills</li>
+                <li onclick="scrollContact()">contact</li>
+            </div>
+        </div>
+        <div class="nav-2">
+            <button id="exit">X</button>
+            <div class="list-2">
                 <li>about</li>
                 <li>projects</li>
                 <li>skills</li>
                 <li>contact</li>
             </div>
         </div>
+        <button id="navBtn">Menu</button>
     </header>
 
     <main>
